<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_store"
            android:title="@string/store_product" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update"
            android:title="@string/update_product" />
        <item
            android:id="@+id/nav_display"
            android:icon="@drawable/ic_display"
            android:title="@string/display_product" />
        <item
            android:onClick="ClickLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_product" />
    </group>



</menu>
