<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_centerInParent="true"
    tools:context=".FirstActivity">
    



    <TextView
            android:id="@+id/tvMainPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="200dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/welcome_note"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:text="@string/back_login" />

    <Button
        android:id="@+id/btFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/back_fragment" />

    <Button
        android:id="@+id/btProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="4dp"
        android:text="@string/back_product" />
    <Button
        android:id="@+id/btNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="4dp"
        android:text="@string/back_network" />



</RelativeLayout>