<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginWelcome">
    <TextView
        android:id="@+id/Mywelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/welcome_note"
        android:textColor="@android:color/black"
        android:textSize="30sp"/>

            <TextView
                android:id="@+id/txusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="center"
                android:layout_marginTop="150dp"
                android:text="@string/title_username"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txuseremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/title_email"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_centerHorizontal="true"
                android:text="@string/back_login" />


</RelativeLayout>