<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationProduct"
    android:id="@+id/store_layout"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/product_marketing"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/textedit">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_prodname"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/etProdname"
            android:hint="@string/product_name"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/textedit">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_prodprice"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/etProdprice"
            android:gravity="center"
            android:hint="@string/product_price"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/textedit">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_date"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/etProdexpire"
            android:hint="@string/product_date"
            android:gravity="center"
            android:textColor="@color/black"
            android:inputType="date"
            android:textColorHint="@color/black"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonedit"
            android:text="@string/product_save"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_700"
            />
    </LinearLayout>
</LinearLayout>